// Vitest Snapshot v1

exports[`empty 1`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children: []
"
`;

exports[`multiple lists 1`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children: []
    - type: listitem
      value: 2
      children: []
    - type: listitem
      value: 3
      children: []
"
`;

exports[`single list - correct 1`] = `
"root:
  type: root
  children:
  - type: list
    children:
    - type: listitem
      value: 1
      children: []
"
`;
